# Radiomodule

./: CMakeLists.txt
cmake/: arm-none-eabi-gcc.cmake  libopencm3.cmake
src/: main.cpp
